# multi-agent-council

./: .gitattributes  .gitignore  README.md  REFERENCES.md  TOOLS.md  install.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: custom_backend.py  demo.py
src/multi_agent_council/: __init__.py  __main__.py  council.py
tests/: test_council.py  test_state_machine.py
