[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-council"
version = "1.0.0"
description = "Structured 7-phase council deliberation framework for multi-AI-CLI think-tanks — headless, scriptable, backend-agnostic."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "rich>=13.0"]

[project.scripts]
council = "multi_agent_council.council:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
